# codenames

./: .gitignore  README.md  codenames.py  config.json  play.py  pyproject.toml  server.py  words.txt
.github/: CODEOWNERS
client/: client.py  config.py  debug.py  display.py  tui.py
common/: constants.py  logger.py  types.py
data/: words.txt
server/: api.py  codenames.py  config.json  engine.py  game.py  main.py  repository.py  rules.py  server.py  service.py
