[project]
name = "codenames"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "dataclass-wizard",
    "windows-curses; sys_platform == 'win32'",
]

[tool.setuptools.packages.find]
include = ["common", "server", "client"]

[project.scripts]
codenames = "client.client:main"
codenames-tui = "client.tui:run"